Update to IntelliJ 2022.3 EAP